# Steganography

./: .gitignore.txt  README.md
imagePasswords/: CMakeLists.txt
imagePasswords/src/: Ideas.txt  ImageEncoder.cpp  helperFunctions.cpp  imageDecoder.cpp  test.cpp
imagePasswords/src/tests/: testFrameWork.cpp
